# spkg

./: .gitignore  CHANGELOG.txt  Cargo.toml  README.md  TODO.md  TODO.txt  api.py  configure.sh  defs.py  init.py  package.db  package_new.db  pkg_script  plugin_daemon.py  requirements.txt  rmcache.sh  sandbox.py  script.setup  setup_script.setup  setup_ubuntu.sh  spkg-installer.py  spkg-sandbox  spkg.py  test.db  test.setup
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  new-package.yml  question.yml  suggestion.yml
.github/workflows/: binary.yml
data/etc/spkg/: config.yml  enabled_plugins.json  lang.yml  package.db  repositories.json  sandbox.json  urls.yml
data/userconfig/spkg/: config.yml  sandbox.yml
docs/de/: INSTALLATION.md  SUBMIT_PACKAGE.md  WELCOME.md
fakeroot/etc/spkg/: config.json  repositories.json  world.db
plugins/: docker.py  repomgr.py  sandbox.py  test.py
setup/: setup_fedora.sh  setup_ubuntu.sh
setup_scripts/: @tools.setup  cpufetch.setup  htop.setup  intellij_idea_community.setup  micro.setup  nano.setup  neofetch.setup  recontrolled.setup  spkg_bin.setup  spkg_git.setup  spkg_py.setup
setup_scripts/neofetch/: PKGBUILD
setup_scripts/spkg/: PKGBUILD  spkg-1.5.0.tar
spkg_api/: Cargo.toml
spkg_api/src/: lib.rs
spkg_api/src/core/: err.rs  mod.rs  package.rs
spkg_api/src/db/: mod.rs
spkg_api/src/path/: files.rs
spkg_api/src/repo/: packages.rs
src/: arch.py  db.py  download.py  force_no_sandbox.py  functions.py  global.rs  install.py  install_sandbox.py  main.rs  package_manager.py  pkg_download.py  pkg_install.py  pkg_remove.py  plugin_daemon.py  remove.py  statics.rs  upgrade.py  utilities.rs  vars.py
src/cli/: args.rs  mod.rs  spinner.rs
src/commands/: build.rs  download.rs  help.rs  info.rs  install.rs  install_bin.rs  install_src.rs  list.rs  mod.rs  plugin.rs  spec.rs  sync.rs
src/core/: config.rs  db.rs  fs.rs  metadata.rs  mod.rs  package.rs  plugin.rs  specfile.rs
src/db/: db.rs
src/err/: db.rs  fs.rs  mod.rs  plugin.rs  spkg.rs
src/fs/: format.rs
src/net/: file.rs  http.rs  mod.rs  remote.rs
src/spinners/: mod.rs  simple.rs  spinners.rs
src/spkg_core/: config.rs  err.rs  files.rs  mod.rs  package.rs
yaml_pkg/: example.yml  libbismuth-git.yml  neofetch.yml  package.yml  spkg.yml  test.yml  yaml_basic.py  yaml_package_loader.py  yaml_pm.py
(+10 files in other folders)
