[package]
name = "spkg"
version = "3.0.0-b2"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
futures-util = "0.3.30"

reqwest = { version = "0.12.5", features = ["stream"] }
stblib = "0.6.2"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"]  }
dialoguer = "0.11.0"
terminal_size = "0.3.0"
karen = "0.1.2"

serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
maplit = "1.0.2"

lazy_static = "1.5.0"
eyre = "0.6.12"

libloading = "0.8.4"
libspkg = { git = "https://github.com/Strawberry-Foundations/libspkg", features = ["plugin", "binpkg"]}